feat: tentativa de responsividade

--- a/teste/teste.html
+++ b/teste/teste.html
@@ -15,40 +15,34 @@
             <li class="carousel-page" id="work-01">
                 <div class="artwork">
                     <model-viewer src="glados.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls touch-action="pan-y"></model-viewer>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque est tenetur placeat, necessitatibus numquam animi totam, dicta consequatur impedit consectetur harum? Natus perspiciatis nemo odio nesciunt cupiditate sequi neque veritatis.</p>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="artwork">
-                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident aspernatur distinctio odit aliquid laboriosam beatae corporis tenetur! Quaerat, sint quam? Maxime amet voluptates maiores laborum magni fuga eveniet soluta. Architecto!</p>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <model-viewer src="potato_glados_-_from_portal_2.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls touch-action="pan-y"></model-viewer>
                 </div>
             </li>
             <li class="carousel-page" id="work-02">
                 <div class="artwork">
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque est tenetur placeat, necessitatibus numquam animi totam, dicta consequatur impedit consectetur harum? Natus perspiciatis nemo odio nesciunt cupiditate sequi neque veritatis.</p>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                     <model-viewer src="glados.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls touch-action="pan-y"></model-viewer>
                 </div>
                 <div class="artwork">
                     <model-viewer src="potato_glados_-_from_portal_2.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls touch-action="pan-y"></model-viewer>
-                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident aspernatur distinctio odit aliquid laboriosam beatae corporis tenetur! Quaerat, sint quam? Maxime amet voluptates maiores laborum magni fuga eveniet soluta. Architecto!</p>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </li>
             <li class="carousel-page" id="work-03">
                 <div class="artwork">
                     <model-viewer src="glados.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls touch-action="pan-y"></model-viewer>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque est tenetur placeat, necessitatibus numquam animi totam, dicta consequatur impedit consectetur harum? Natus perspiciatis nemo odio nesciunt cupiditate sequi neque veritatis.</p>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="artwork">
-                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident aspernatur distinctio odit aliquid laboriosam beatae corporis tenetur! Quaerat, sint quam? Maxime amet voluptates maiores laborum magni fuga eveniet soluta. Architecto!</p>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <model-viewer src="potato_glados_-_from_portal_2.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls touch-action="pan-y"></model-viewer>
                 </div>
             </li>
         </ul>
-
-        <div>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
     </div>
 
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
