fix: botões do carrossel, nomes das páginas

--- a/teste/teste.html
+++ b/teste/teste.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testes de visualizadores 3D</title>
+    <title>Acervo Digital</title>
     <link href=".\img\Favicon.png" rel="icon" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,7 +17,6 @@
     </div>
 
     <pgtitle>Visualização com o model-viewer</pgtitle>
-    <link rel="stylesheet" href="style.css">
     <h1>Museu Digital - Beijódromo Interativo</h1>
     <p>Museu de gêmeos digitais das obras do Memorial Darcy Ribeiro.</p>
 
