chore: reorganização do repositório
ainda vou explicar a organização dos arquivos no README

--- a/acervo-digital.html
+++ b/acervo-digital.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acervo Digital</title>
     <link href=".\img\Favicon.png" rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pages/styles/main.css">
 </head>
 <body>
 
@@ -24,12 +24,13 @@
         <ul class="carousel">
             <li class="carousel-page" id="work-01">
                 <div class="artwork">
-                    <model-viewer src="glados.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls touch-action="pan-y"></model-viewer>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <model-viewer src="assets/models/beetlefusca_version_1.glb" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" autoplay camera-orbit="-151.5deg 79.3deg 1162m" field-of-view="30deg" auto-rotate interaction-prompt="none"></model-viewer>
+                    <p class="description">"Beetle/Fusca (Version 1)" (<a href="https://skfb.ly/6GFDP">https://skfb.ly/6GFDP</a>) by soujagah is licensed under Creative Commons Attribution (<a href="http://creativecommons.org/licenses/by/4.0/">http://creativecommons.org/licenses/by/4.0/</a>).</p>
                 </div>
+
                 <div class="artwork">
-                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <model-viewer src="potato_glados_-_from_portal_2.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls touch-action="pan-y"></model-viewer>
+                    <p class="description">"Dragon Sculpture" by Moøkan is licensed under Creative Commons Attribution-ShareAlike (<a href="http://creativecommons.org/licenses/by-sa/4.0/">http://creativecommons.org/licenses/by-sa/4.0/</a>).</p>
+                    <model-viewer src="assets/models/dragon_sculpture.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" camera-orbit="14.69deg 71.78deg 40.97m" field-of-view="30deg" interaction-prompt="none"></model-viewer>
                 </div>
             </li>
             <li class="carousel-page" id="work-02">
