fix: caminhos de arquivos, reorganização main.css
- título com classe pgtitle
- caminhos arrumados, considerando a nova estrutura do projeto
- reordenação das estilizações em main.css
- removidas estilização das classes artwork, description e tag model-viewer não usadas

--- a/src/pages/envio.html
+++ b/src/pages/envio.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envio de obra - Acervo Digital</title>
     <link href=".\img\Favicon.png" rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
     <div class="navegacao">
     <ul>
-        <li><a href=".\teste.html">Visualizador</a></li>
+        <li><a href=".\acervo-digital.html">Visualizador</a></li>
         <li><a href=".\envio.html">enviar</a></li>
     </ul>
     </div>
