--- a/src/pages/acervo-digital.html
+++ b/src/pages/acervo-digital.html
@@ -11,45 +11,44 @@
 
     <div class="navegacao">
         <ul>
-            <li><a href=".\teste.html">Visualizador</a></li>
-            <li><a href=".\envio.html">enviar</a></li>
+            <li><a href=".\teste.html">Acervo</a></li>
+            <li><a href=".\envio.html">Enviar</a></li>
          </ul>
     </div>
 
-    <pgtitle>Visualização com o model-viewer</pgtitle>
-    <h1>Museu Digital - Beijódromo Interativo</h1>
-    <p>Museu de gêmeos digitais das obras do Memorial Darcy Ribeiro.</p>
+    <h1 class="pgtitle">Acervo Digital - CAL</h1>
+    <p>Acervo de gêmeos digitais da Casa de Cultura da América Latina (CAL/DEX).</p>
 
     <div class="container">
         <ul class="carousel">
             <li class="carousel-page" id="page01">
                 <div class="artwork">
                     <model-viewer class="visualizador" src="../../assets/models/beetlefusca_version_1.glb" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" autoplay camera-orbit="-151.5deg 79.3deg 1162m" field-of-view="30deg" auto-rotate interaction-prompt="none"></model-viewer>
-                    <p class="description">"Beetle/Fusca (Version 1)" (<a href="https://skfb.ly/6GFDP">https://skfb.ly/6GFDP</a>) by soujagah is licensed under Creative Commons Attribution (<a href="http://creativecommons.org/licenses/by/4.0/">http://creativecommons.org/licenses/by/4.0/</a>).</p>
+                    <p class="descricao">"<a href="https://skfb.ly/6GFDP">Beetle/Fusca (Version 1)</a>" by soujagah is licensed under (<a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution</a>).</p>
                 </div>
 
                 <div class="artwork">
-                    <p class="description">"Dragon Sculpture" by Moøkan is licensed under Creative Commons Attribution-ShareAlike (<a href="http://creativecommons.org/licenses/by-sa/4.0/">http://creativecommons.org/licenses/by-sa/4.0/</a>).</p>
+                    <p class="descricao"><a href="https://skfb.ly/OL9v">"Dragon Sculpture"</a> by Moøkan is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike</a>.</p>
                     <model-viewer class="visualizador" src="../../assets/models/dragon_sculpture.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" shadow-softness="1" camera-orbit="-175.2deg 91.84deg 40.97m" field-of-view="30deg" auto-rotate interaction-prompt="none"></model-viewer>
                 </div>
             </li>
             <li class="carousel-page" id="page02">
                 <div class="artwork">
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <p class="descricao">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure mollitia voluptates ab saepe alias, sapiente odio, officiis officia tempora id sed velit. Repellendus vero sint molestias enim minima distinctio consequatur.</p>
                     <model-viewer class="visualizador" src="../../assets/models/dog_wood_toy_low_poly.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls camera-orbit="66.59deg 85.75deg 18.9m" touch-action="pan-y" auto-rotate interaction-prompt="none"></model-viewer>
                 </div>
                 <div class="artwork">
                     <model-viewer class="visualizador" src="potato_glados_-_from_portal_2.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls touch-action="pan-y"></model-viewer>
-                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p class="descricao">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </li>
             <li class="carousel-page" id="page03">
                 <div class="artwork">
                     <model-viewer class="visualizador" src="glados.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls touch-action="pan-y"></model-viewer>
-                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <p class="descricao">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="artwork">
-                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p class="descricao">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <model-viewer class="visualizador" src="potato_glados_-_from_portal_2.glb" poster="Sem_título.png" shadow-intensity="0.2" camera-controls touch-action="pan-y"></model-viewer>
                 </div>
             </li>
